# bonito

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
bonito/: __init__.py  data.py  nn.py  reader.py  training.py  util.py
bonito/cli/: train.py
bonito/transformer/: model.py
documentation/: training.md
