[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ont-bonito"
dynamic = ["version", "dependencies"]
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Oxford Nanopore Technologies, Ltd", email = "support@nanoporetech.com" }
]

urls = { Homepage = "https://github.com/nanoporetech/bonito" }

[project.optional-dependencies]
cu128 = ["torch==2.9.0+cu128"]
cu130 = ["torch==2.9.0+cu130"]

[project.scripts]
bonito = "bonito:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "bonito.__version__" }
dependencies = { file = ["requirements.txt"] }
